Fixed footer p spacing

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -22,7 +22,7 @@ a:hover {
     width: 100%;
 }
 
-p {
+p:not(.lead) {
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -277,7 +277,8 @@ ul.subnav {
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    background: rgba(232, 98, 86, 0.8) url(/images/cd-top-arrow.svg) no-repeat center 50%;
+    /*background: rgba(232, 98, 86, 0.8) url(/images/cd-top-arrow.svg) no-repeat center 50%;*/
+    background: rgba(66, 139, 202, 0.8) url(/images/cd-top-arrow.svg) no-repeat center 50%;
     background-size: 60px 60px;
     visibility: hidden;
     opacity: 0;
@@ -326,6 +327,8 @@ body {
 }
 .footer p {
     line-height: 1.0;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 .footer-space {
     padding-top: 30px;
