--- a/public/stylesheets/extrasmall.css
+++ b/public/stylesheets/extrasmall.css
@@ -13,7 +13,9 @@
 	       padding-left: 15px;
     }
 
-
+    .cd-top.cd-is-visible {
+        visibility: hidden;
+    }
 
     #map {
         height: 500px;
