--- a/public/stylesheets/large.css
+++ b/public/stylesheets/large.css
@@ -3,6 +3,27 @@
     #map {
 	       height: 700px;
     }
+
+    .cd-top.cd-is-visible {
+        /* the button becomes visible */
+        visibility: visible;
+        opacity: 1;
+    }
+    .cd-top {
+        height: 80px;
+        width: 80px;
+        position: fixed;
+        bottom: 100px;
+        right: 100px;
+        z-index: 10;
+        /* image replacement properties */
+        overflow: hidden;
+        text-indent: 100%;
+        white-space: nowrap;
+        background-size: 80px 80px;
+        visibility: hidden;
+        opacity: 0;
+    }
     #map-photo {
 	       height: 300px;
     }
