--- a/public/stylesheets/small.css
+++ b/public/stylesheets/small.css
@@ -1,6 +1,8 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-
+    .cd-top.cd-is-visible {
+        visibility: hidden;
+    }
     #map {
 	height: 600px;
     }
